--- a/learn-jenkins-app/Jenkinsfile
+++ b/learn-jenkins-app/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
             }
             steps {
                 sh '''
+                cd learn-jenkins-app
                 yarn -v
                 yarn
                 yarn build
